# sensor-viz

./: .gitignore  Makefile  QUICKSTART.md  README.md  TESTING_STRATEGY.md  claude.md  main.py  package.json  playwright.config.js  pyproject.toml
.claude/: settings.local.json
e2e/: README.md  windowing.spec.js
static/css/: styles.css
static/js/: charts.js
templates/: index.html
tests/: README.md  conftest.py  test_api.py  test_windowing.py
